# banco-de-dados-massivos

./: .gitignore  README.md
chromadb/: README.md  docker-compose.yml
chromadb/chromadb-python/: README.md  pyproject.toml
chromadb/chromadb-python/chromadb_python/: hello_chromadb.py
milvus/: README.md  (+2 more)
milvus/milvus-python/: README.md  pyproject.toml
milvus/milvus-python/milvus_python/: hello_milvus.py
milvus/milvus-python/milvus_python/benchmark/: benchmarking.py  collection_prepare.py  go_benchmark.py  search_vector_file.json
milvus/milvus-python/milvus_python/embedding_model/: sentence_embedding_bert_model.py  sentence_embedding_model.py
milvus/milvus-python/milvus_python/evaluate/: benchmark_test_data.json  evaluate_milvus.py  evaluate_parms.py  question_answering_analisys.ipynb  question_stats.csv  textbook_analisys.ipynb.html  textbook_analisys.ipynb.ipynb  textbook_stats.csv
milvus/milvus-python/milvus_python/results/evaluation/: index_hnsw__cosine_similarity.csv  index_ivf_sq8__inner_product.csv  index_scann__inner_product.csv
milvus/milvus-python/milvus_python/results/setup/: index_flat__cosine_similarity.csv  index_ivf_flat__cosine_similarity.csv  index_ivf_sq8__euclidean_distance.csv  index_scann__cosine_similarity.csv  index_scann__inner_product.csv
milvus/milvus-python/milvus_python/run/: run.py  run_setup.py
milvus/milvus-python/milvus_python/setup/: setup_insert_milvus.py  setup_params_milvus.py  setup_resources_milvus.py  utils.py
milvus/milvus-python/milvus_python/test/: test_generation_embedding.py  test_generation_rewrited.py
(+109 files in other folders)
