[tool.poetry]
name = "milvus-python"
version = "0.1.0"
description = ""
authors = ["baptvit <jvrbaptista@live.com>"]
readme = "README.md"

[tool.poetry.dependencies]
python = "^3.11"
numpy = "^1.26.4"
setuptools = "^70.0.0"
pymilvus = "^2.4.3"


[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
