[tool.poetry]
name = "milvus-python"
version = "0.1.0"
description = ""
authors = ["baptvit <jvrbaptista@live.com>"]
readme = "README.md"

[tool.poetry.dependencies]
python = "^3.11"
numpy = "^1.26.4"
setuptools = "^70.0.0"
pymilvus = {extras = ["bulk-writer"], version = "^2.4.3"}
psutil = "^5.9.8"
memory-profiler = "^0.61.0"
black = "^24.4.2"
matplotlib = "^3.9.0"
pandas = "^2.2.2"
pydelta = "^1.7.0"
pyarrow = "^16.1.0"
profilehooks = "^1.12.0"
transformers = "^4.41.2"
huggingface = "^0.0.1"
torch = "^2.3.1"
generativeai = "^0.0.1"
google-generativeai = "^0.6.0"


[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
